--- a/css/master.css
+++ b/css/master.css
@@ -1,40 +1,272 @@
-body{
+body {
   font-family: Arial;
-  color:#313131;
+  color: #313131;
 }
 
-.top-header .phone{
-  margin-right:.25rem;
+.h1, .h2, .h3, h1, h2, h3 {
+  font-weight: 800;
 }
-.icon-img{
-  width:1.5rem;
+
+.h6, h6 {
+  font-weight: 600;
+}
+
+.h1, h1 {
+  font-size: 2.75rem;
+}
+
+.h2, h2 {
+  font-size: 2.4rem;
+}
+
+.top-header .phone {
+  margin-right: .25rem;
+}
+
+.icon-img {
+  width: 1.5rem;
   height: 1.5rem;
 }
-.top-header {
 
+.top-header {}
+
+.bg-grey {
+  background-color: #676767;
 }
-.bg-grey{
+
+.bg-light-grey {
   background-color: #9d9d9d;
 }
 
+.bg-dark-grey {
+  background-color: #313131;
+}
+
+.text-light-grey {
+  color: #9d9d9d;
+}
+
+.navbar-brand img {
+  width: 10.5rem;
+}
+
 .navbar-light .navbar-nav .nav-link {
-    color: #313131;
-    border-bottom: .15rem solid transparent;
-    padding: 0;
-    font-weight: 600;
+  color: #313131;
+  border-bottom: .15rem solid transparent;
+  padding: 0;
+  font-weight: 600;
+  font-size: 1.1rem;
 }
+
 .navbar-light .navbar-nav .nav-item {
-    padding: .5rem 0 .5rem 1.25rem;
+  padding: .5rem 0 .5rem 1.25rem;
 }
+
 .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
-    color: #2160a8;
-    border-color: #f2c334;
+  color: #2160a8;
+  border-color: #f2c334;
 }
 
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-    color: #2160a8;
-    border-color: #f2c334;
+  color: #2160a8;
+  border-color: #f2c334;
 }
+
 .navbar {
-    padding: 3rem 1rem;
+  padding: 3rem 1rem;
+}
+
+.white-overlay {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: transparent;
+  z-index: 0;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.5) 59%, rgba(0, 0, 0, 0) 70%);
+}
+
+.white-overlay-banner {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: transparent;
+  z-index: 0;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.7) 60%, rgba(0, 0, 0, 0) 90%);
+}
+
+.overlay-text {
+  left: 0;
+  top: 50%;
+  width: 100%;
+  z-index: 1;
+  transform: translateY(-50%);
+}
+
+.overlay-arrow {
+  left: 50%;
+  bottom: 7%;
+  z-index: 1;
+  transform: translateX(-50%);
+}
+
+.text-blue {
+  color: #2160a8;
+}
+
+.small, small {
+  font-size: 70%;
+  font-weight: 400;
+}
+
+.yellow-border {
+  border-bottom: .3rem solid #f2c334;
+}
+
+.yellow-border-h2 {
+  border-bottom: .25rem solid #f2c334;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #2160a8;
+  border-color: #2160a8;
+}
+
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
+  color: #fff;
+  background-color: #2160a8;
+  border-color: #2160a8;
+}
+
+.btn-primary:hover {
+  color: #fff;
+  background-color: #2160a8;
+  border-color: #2160a8;
+}
+
+.btn-group-sm>.btn, .btn-sm {
+  padding: .15rem .85rem;
+  font-size: .87rem;
+  line-height: 1.5;
+  border-radius: .5rem;
+  font-weight: 600;
+}
+
+.new {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #f2c334;
+  font-weight: 800;
+  height: 3.5rem;
+  width: 3.5rem;
+  font-size: 1.1rem;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  transform: translateX(-30%)translateY(-35%);
+  border-radius: 50%;
+}
+
+label {
+  color: #676767;
+  font-weight: 600;
+}
+
+.form-control {
+  color: #313131;
+  border: 1px solid #dfdfdf;
+  border-radius: 0;
+  background-color: #dfdfdf;
+}
+
+.form-control:focus {
+  color: #313131;
+  background-color: #fff;
+  border-color: #2160a859;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem #2160a873;
+}
+
+footer .footer-icon {
+  width: 2rem;
+  height: 2rem;
+}
+
+footer .contact a {
+  color: white;
+  font-size: .8rem;
+  font-weight: 600;
+  line-height: 1.2;
+  margin-left: 1rem;
+}
+
+footer .contact a:hover {
+  color: white;
+  text-decoration: none;
+}
+
+.grey-border {
+  display: flex;
+  height: 4rem;
+  width: .2rem;
+  background-color: #8d8d8d;
+  margin: 0 1.5rem;
+  margin-top: 3rem;
+}
+
+footer .nav-link {
+  display: block;
+  font-weight: 600;
+  padding: .5rem .75rem;
+  color: white;
+}
+
+footer .nav-link:hover , footer .nav-link.active {
+  color: #f2c334;
+}
+
+.grey-hr {
+  width: 19rem;
+  background: #676767;
+  height: .05rem;
+}
+
+.btn-request{
+    position: absolute;
+    top: 0;
+    right: 1rem;
+    background-color: #f2c334;
+    height: 5rem;
+    width: 5rem;
+    font-size: .8rem;
+    border-radius: 50%;
+    color: #313131;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    line-height: 1.1;
+    padding: .5rem;
+    transform: translateY(-40%);
+}
+.btn-request:hover,.btn-request:focus{
+  color:#313131;
+  text-decoration: none;
+}
+
+.search .dropdown-menu {
+    min-width: 20rem;
+    padding: 0;
+    margin: .125rem 0 0;
+    font-size: 1rem;
+    color: #313131;
+    border: 3px solid #676767;
+    border-radius: .25rem;
+}
+.search .input-group {
+    border-bottom: 3px solid #676767;
 }
