--- a/css/master.css
+++ b/css/master.css
@@ -72,8 +72,8 @@ body {
   border-color: #f2c334;
 }
 
-.navbar {
-  padding: 3rem 1rem;
+.navbar-brand {
+  padding: 3rem 0;
 }
 
 .white-overlay {
@@ -225,7 +225,7 @@ footer .nav-link {
   color: white;
 }
 
-footer .nav-link:hover , footer .nav-link.active {
+footer .nav-link:hover, footer .nav-link.active {
   color: #f2c334;
 }
 
@@ -235,38 +235,164 @@ footer .nav-link:hover , footer .nav-link.active {
   height: .05rem;
 }
 
-.btn-request{
-    position: absolute;
-    top: 0;
-    right: 1rem;
-    background-color: #f2c334;
-    height: 5rem;
-    width: 5rem;
-    font-size: .8rem;
-    border-radius: 50%;
-    color: #313131;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    line-height: 1.1;
-    padding: .5rem;
-    transform: translateY(-40%);
+.btn-request {
+  position: absolute;
+  top: 0;
+  right: 1rem;
+  background-color: #f2c334;
+  height: 5rem;
+  width: 5rem;
+  font-size: .8rem;
+  border-radius: 50%;
+  color: #313131;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  line-height: 1.1;
+  padding: .5rem;
+  transform: translateY(-40%);
 }
-.btn-request:hover,.btn-request:focus{
-  color:#313131;
+
+.btn-request:hover, .btn-request:focus {
+  color: #313131;
   text-decoration: none;
 }
 
 .search .dropdown-menu {
-    min-width: 20rem;
+  min-width: 20rem;
+  padding: 0;
+  margin: .125rem 0 0;
+  font-size: 1rem;
+  color: #313131;
+  border: 3px solid #676767;
+  border-radius: .25rem;
+}
+
+.search .input-group {
+  border-bottom: 3px solid #676767;
+}
+
+.search .dropdown-menu.show {
+  display: inline-table;
+}
+
+.search .input-group-text {
+  background-color: transparent;
+  border: 1px solid transparent;
+}
+
+.search .form-control {
+  color: #313131;
+  border: 1px solid transparent;
+  border-radius: 0;
+  background-color: transparent;
+  box-shadow: none;
+}
+
+.search .dropdown-item {
+  padding: .25rem 1rem;
+  color: #313131;
+}
+
+@media (max-width: 1199.98px) {}
+
+@media (max-width: 991.98px) {
+  .top-header {
+    font-size: 0.9rem;
+  }
+
+  .navbar-light .navbar-toggler {
+    border: 0;
     padding: 0;
-    margin: .125rem 0 0;
+    background-image: none;
+    color: #676767;
+  }
+
+  .navbar-brand img {
+    width: 9.5rem;
+  }
+  .navbar-collapse {
+    margin: 0 -15px;
+    background-color: #9d9d9d;
+    padding: 2rem 0;
+}
+.navbar-nav {
+    align-items: center;
+}
+.navbar-light .navbar-nav .nav-link {
+    color: #fff;
+    font-size: 1rem;
+    border: 0;
+}
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
+    color: #f2c334;
+}
+.dropdown.search {
+    position: unset;
+}
+.search .dropdown-menu {
+    min-width: 16rem;
+    width: 100%;
+    padding: 0;
+    margin: 0;
     font-size: 1rem;
     color: #313131;
     border: 3px solid #676767;
-    border-radius: .25rem;
+    border-radius: 0;
 }
-.search .input-group {
-    border-bottom: 3px solid #676767;
 }
+
+@media (max-width: 767.98px) {
+  .h1, h1 {
+    font-size: 1.75rem;
+  }
+
+  h1 span.small {
+    font-size: 1rem;
+  }
+
+  .overlay-text {
+    text-align: center;
+  }
+
+  .white-overlay {
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.6) 100%, rgba(0, 0, 0, 0) 70%);
+  }
+
+  .h2, h2 {
+    font-size: 1.5rem;
+  }
+
+  .white-overlay-banner {
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.5) 100%, rgba(0, 0, 0, 0) 90%);
+  }
+
+  .btn-request {
+    transform: rotate(90deg) translateY(-4.5rem);
+    border-radius: 1.5rem;
+    width: 9rem;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    right: 1rem;
+    height: 2rem;
+    font-size: .75rem;
+    justify-content: center;
+    padding-top: .4rem;
+  }
+  footer .nav-link {
+    padding: .35rem .75rem;
+    text-align: center;
+}
+.grey-hr {
+    width: 8rem;
+    background: #676767;
+    height: .1rem;
+    margin: 1rem 0;
+}
+.copy{
+  font-size:.8rem;
+}
+}
+
+@media (max-width: 575.98px) {}
